language/move-lang/tests/move_check/translated_ir_tests/move/commands/pop_negative.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/translated_ir_tests/move/commands/pop_negative.move:7:9
  │
2 │     fun three(): (u64, u64, u64) {
  │                  --------------- Given expression list of length 3: '(u64, u64, u64)'
  ·
7 │         (_, _, _, _) = three();
  │         ^^^^^^^^^^^^
  │         │
  │         Invalid value for assignment
  │         Expected expression list of length 4: '(_, _, _, _)'

